# docs/swagger.json
@@ -16,6 +16,26 @@
     "host": "www.zogfestiv.store",
     "basePath": "/",
     "paths": {
+        "/info": {
+            "get": {
+                "description": "provides server info",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "Info",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Info"
+                        }
+                    }
+                }
+            }
+        },
         "/metrics": {
             "get": {
                 "description": "provides RabbitMQ metrics",
@@ -41,6 +61,23 @@
         }
     },
     "definitions": {
+        "api.Info": {
+            "type": "object",
+            "properties": {
+                "compile_date": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "log_level": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
         "api.QueueInfo": {
             "type": "object",
             "properties": {
